hermes_fuzz_executed/fuzz_74_execution
'use strict';
let b = await Promise.resolve('done');


Execution Output ------------------:
test.js:2:15: error: ';' expected
let b = await Promise.resolve('done');
              ^
